<resources>
    <string name="app_name">Consentcoin</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <!-- layout.xml -->

    <!-- Buttons -->
    <string name="rb_member">Member</string>
    <string name="rb_organization">Organization</string>
    <string name="rb_members">Members</string>
    <string name="rb_members_and_wards">Members and their wards</string>
    <string name="rb_commercial">Commercial use</string>
    <string name="rb_non_commercial">Non-commercial use</string>
    <string name="rb_all_members">All members</string>
    <string name="rb_selected_members">Selected members</string>
    <string name="button_send">Send</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_accept">Accept</string>
    <string name="button_deny">Deny</string>
    <string name="button_decide_later">Decide later</string>
    <string name="button_read_more">Read more</string>
    <string name="button_back">Back</string>
    <string name="button_delete_consentcoin">Delete Consentcoin</string>

    <!-- TextView, ImageView and TextFields -->

    <string name="tv_create_request1">Create Request</string>
    <string name="tv_create_request2">"We at "</string>
    <string name="tv_create_request3">would like to use pictures of the following person(s):</string>
    <string name="tv_create_request4">for the following purpose(s):</string>
    <string name="tv_create_request5">for the following duration:</string>

    <string name="tf_start_date">Start Date</string>
    <string name="tf_end_date">End Date</string>
    <string name="tv_send_request_to">"Send this request to: "</string>
    <string name="tf_search_users">Search for specific user</string>
    <string name="tf_enter_organisation_mail">Enter organization e-mail</string>
    <string name="tf_enter_member_mail">Enter member e-mail</string>
    <string name="tf_enter_organization">Enter organization name</string>

    <string name="text_navigation_header">Navigation header</string>

    <string name="tv_firstname_lastname">Firstname Lastname</string>
    <string name="tv_default_email">email@email.com</string>

    <!-- Menu items -->

    <string name="item_pending_requests">Pending Requests</string>
    <string name="item_active_requests">Active Requests</string>
    <string name="item_create_requests">Create Request</string>
    <string name="item_my_consentcoins">My Consentcoins</string>
    <string name="item_pending_invites">Pending Invites</string>
    <string name="item_invite">Invite</string>
    <string name="item_add_organization">Add Organization</string>
    <string name="item_add_member">Add Member</string>
    <string name="item_my_organizations">My Organizations</string>
    <string name="item_my_members">My Members</string>
    <string name="item_settings">Settings</string>
    <string name="item_log_out">Log out</string>

    <string name="title_communicate">Communicate</string>


    <!-- MainActivity -->
    <!-- Generals -->

    <string name="member">Member</string>
    <string name="organization">Organization</string>
    <string name="create">Create</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="space">" "</string>

    <!-- AlertDialog titles -->

    <string name="title_specify_user_details">Specify user details</string>
    <string name="title_process_request">Pending request(s)</string>
    <string name="title_requests_sent">Sent permission requests</string>
    <string name="title_my_consentcoins">My Consentcoins</string>
    <string name="title_add_with_space">"Add "</string>
    <string name="title_my_with_space">"My "</string>
    <string name="title_invite_members">Invite member(s)</string>
    <string name="title_create_invites">Pending invites</string>


    <!-- Toast messages -->

    <string name="toast_signed_in">Signed in!</string>
    <string name="toast_sign_in_cancelled">"Sign in canceled"</string>
    <string name="toast_pr_not_processed">Permission request not yet processed</string>
    <string name="toast_concentcoin_ok">Consentcoin RESULT_OK</string>
    <string name="toast_concentcoin_cancelled">Consentcoin RESULT_CANCELED</string>
    <string name="toast_invite_accepted">Invite Accepted</string>
    <string name="toast_invite_declined">Invite declined</string>
    <string name="toast_permission_given">Permission given</string>
    <string name="toast_permission_denied">Permission denied</string>
    <string name="toast_user_details_saved">User details saved</string>
    <string name="toast_add_users_to_request">Add members before creating a request</string>
    <string name="toast_no_active_requests">You have no active permission requests</string>
    <string name="toast_getting_consentcoins">Getting Consentcoin. Please wait</string>
    <string name="toast_no_consentcoins">You have no Consentcoins</string>
    <string name="toast_you_have_no">"You have no "</string>

    <!-- Strings in arrays -->

    <string name="array_id">"ID: "</string>
    <string name="array_member">" Member: "</string>
    <string name="array_receiver">" Receiver: "</string>
    <string name="array_date">" Date: "</string>
    <string name="array_org">" Organization: "</string>
    <string name="array_end_date">" End Date: "</string>
    <string name="array_party">" Other party: "</string>

    <!-- AdapterMainActivity -->

    <string name="dot">.</string>

    <string name="toast_swipe_to_delete">Hint: Swipe to delete</string>

    <string name="text_user_created">User created</string>
    <string name="text_your_user_created">Your user was created.</string>
    <string name="text_request_sent">Permission request sent</string>
    <string name="text_your_request_sent">"You sent a permission request to "</string>
    <string name="text_request_received">Permission request received</string>
    <string name="text_you_received_request">"You received a permission request from "</string>
    <string name="text_consentcoin_received">Consentcoin received</string>
    <string name="text_user_received_consentcoin">"You received a Consentcoin by accepting the permission request from "</string>
    <string name="text_org_received_consentcoin">"You received a Consentcoin as "</string>
    <string name="text_user_accepted_request">" accepted your permission request."</string>
    <string name="text_permission_denied">Permission request denied</string>
    <string name="text_request_denied_user">"You denied the permission request from "</string>
    <string name="text_request_denied_org">" denied your permission request."</string>
    <string name="text_consentcoin_revoked">Consentcoin revoked</string>
    <string name="text_revoked_part_one">"Your Consentcoin agreement with "</string>
    <string name="text_revoked_part_two">" was revoked."</string>
    <string name="text_invite_sent">Invite request sent</string>
    <string name="text_your_invite_sent">"You sent an invite request to "</string>
    <string name="text_invite_received">Invite request received</string>
    <string name="text_you_received_invite">"You received an invite request from "</string>
    <string name="text_invite_accepted">Invite request accepted</string>
    <string name="text_you_accepted_invite">"You have accepted an invite request from "</string>
    <string name="text_org_accepted_invite_part_one">"Your invite request to "</string>
    <string name="text_org_accepted_invite_part_two">" has been accepted."</string>
    <string name="text_invite_decnied">Invite request denied</string>
    <string name="text_you_denied_invite">"You have denied an invite request from "</string>
    <string name="text_org_denied_invite_part_one">"Your invite request to "</string>
    <string name="text_org_denied_invite_part_two">" has been denied."</string>



    <!-- AdapterProcess request -->

    <string name="text_sender">"Sender: "</string>
    <string name="text_received">"Received: "</string>

    <!-- CreateRequestActivity -->

    <string name="toast_select_purpose">Please select purpose(s)</string>
    <string name="toast_select_member">Please select at least one member</string>
    <string name="toast_select_date">End date must be later than start date</string>
    <string name="toast_request_sent">Request(s) sent!</string>

    <!-- MyConsentcoinActivity -->

    <string name="consentcoin_value_id">"Coin-ID: "</string>
    <string name="consentcoin_value_contract_type">"\nContractType: "</string>
    <string name="consentcoin_value_mem">"\nMember: "</string>
    <string name="consentcoin_value_org">"\nOrganization: "</string>
    <string name="consentcoin_value_confirm">"Are you sure that you want to withdraw your permission?"</string>
    <string name="consentcoin_value_y">"Yes"</string>
    <string name="consentcoin_value_n">"No"</string>

    <!-- ContractTypeEnum -->

    <string name="contract_type_commercial">commercial</string>
    <string name="contract_type_non_commercial">non commercial</string>
    <string name="contract_type_commercial_and_non_commercial">commercial and non commercial</string>

    <!-- CreateRequestActivity -->

    <string name="contract_myself">myself</string>
    <string name="contract_myself_and_wards">myself and my wards</string>

    <string name="contract_text_part_one">"I "</string>
    <string name="contract_text_part_two">"\nwould like to give "</string>
    <string name="contract_text_part_three">"\npermission to use images of "</string>
    <string name="contract_text_part_four">" for "</string>
    <string name="contract_text_part_five">" purposes.\nThe permission will be valid in the time between\n"</string>
    <string name="contract_text_part_six">" and "</string>

    <!-- Strings for ProcessInviteActivity -->

    <string name="invite_message">" has invited you to become a member of their organization</string>

    <!-- Strings for invite dialog -->
    <string name="invite_add_member_btn_txt">add</string>
    <string name="informationText">Information will come in the future</string>


</resources>
