<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--How to find icons: 1) Go to https://materialdesignicons.com/ 2) Click an icon 3) Click </> 4) Click "View Vector Drawable" 5) Add it to the "drawable" folder-->

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pending_requests"
            android:icon="@drawable/icon_pending_requests"
            android:title="@string/item_pending_requests"
            app:actionViewClass="android.widget.TextView" />
        <item
            android:id="@+id/nav_create_request"
            android:icon="@drawable/icon_create_request"
            android:title="@string/item_create_requests" />
        <item
            android:id="@+id/nav_active_requests"
            android:icon="@drawable/icon_sent_requests"
            android:title="@string/item_active_requests" />
        <item
            android:id="@+id/nav_my_consentcoins"
            android:icon="@drawable/icon_my_consentcoins"
            android:title="@string/item_my_consentcoins" />
        <item
            android:id="@+id/nav_pending_invites"
            android:icon="@drawable/icon_pending_requests"
            android:title="@string/item_pending_invites"
            app:actionViewClass="android.widget.TextView"/>
        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/icon_invite"
            android:title="@string/item_invite" />
        <item
            android:id="@+id/nav_add_organization"
            android:icon="@drawable/icon_add"
            android:title="@string/item_add_organization" />
        <item
            android:id="@+id/nav_add_member"
            android:icon="@drawable/icon_add"
            android:title="@string/item_add_member" />
        <item
            android:id="@+id/nav_my_organizations"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/item_my_organizations" />
        <item
            android:id="@+id/nav_my_members"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/item_my_members" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/item_settings" />
    </group>

    <!--<item android:title="@string/title_communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_my_organizations"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="@string/item_my_organizations" />-->
            <!--<item-->
                <!--android:id="@+id/nav_my_members"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="@string/item_my_members" />-->
            <!--<item-->
                <!--android:id="@+id/nav_settings"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="@string/item_settings" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
