<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.ProcessInviteActivity">

    <TextView
        android:id="@+id/tv_process_invite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vollkorn"
        android:textSize="30sp" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="accept"
        android:text="@string/button_accept"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="deny"
        android:text="@string/button_deny"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="later"
        android:text="@string/button_decide_later"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

</LinearLayout>