<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.ProcessRequestActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_show_contract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vollkorn"
                android:layout_margin="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear_layout_request1"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_below="@id/tv_show_contract">


                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:id="@+id/request_button_read_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:onClick="readMore"
                    android:text="@string/button_read_more"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:layout_weight="1"
                    />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:onClick="back"
                    android:text="@string/button_back"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:layout_weight="1"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear_layout_request2"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_below="@id/linear_layout_request1">

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:id="@+id/request_button_accept"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:onClick="accept"
                    android:text="@string/button_accept"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:layout_weight="1"
                    />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:onClick="deny"
                    android:text="@string/button_deny"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:backgroundTint="@color/colorRed"
                    android:layout_weight="1"
                    />

            </LinearLayout>

        </RelativeLayout>

</ScrollView>